--- a/src/assets/styles/pagehome.css
+++ b/src/assets/styles/pagehome.css
@@ -1,18 +1,25 @@
-.left__navigation__bar {
-  width: 60px;
-  height: 627px;
-  background-color: #282b30;
-}
-.center__navigation__bar {
-  width: 254px;
-  height: 627px;
-  background-color: #e6e5e5;
-}
 #pageHome {
   display: flex;
 }
-.right__navigation__bar {
-  flex: 1;
-  background-color: #f5f5f5;
-  height: 627px;
+.el-carousel__item h3 {
+  color: #475669;
+  font-size: 14px;
+  opacity: 0.75;
+  line-height: 200px;
+  margin: 0;
+}
+.el-carousel__item:nth-child(2n) {
+  background-color: #99a9bf;
+}
+.el-carousel__item:nth-child(2n+1) {
+  background-color: #d3dce6;
+}
+.main__box {
+  width: 100%;
+  background-color: #f2f2f2;
+  padding-top: 20px;
+}
+.main__box .slideshow {
+  padding-left: 33px;
+  padding-right: 33px;
 }
