仿QQ音乐桌面版

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -52,6 +52,7 @@ body {
     overflow: hidden;
     /* padding-top: 80px; */
     padding-left: 215px;
+    /* padding-bottom: 66px!important; */
     /* padding-top: 86px; */
 }
 
