--- a/src/assets/styles/pagehome.less
+++ b/src/assets/styles/pagehome.less
@@ -1,8 +1,6 @@
 #pageHome {
     display: flex;
-    height: 508px;
     position: relative;
-    overflow-y: hidden;
 }
 
 .el-carousel__item h3 {
@@ -23,6 +21,10 @@
 
 .main__box {
     width: 100%;
+    // overflow-y: hidden;
+    // height: 505px;
+    // padding-bottom: 1000px;
+    position: relative;
     .slideshow {
         background: linear-gradient(#f0f0f0, #fafafa);
         padding-left: 33px;
@@ -112,4 +114,7 @@
             }
         }
     }
+}
+.iScrollIndicator {
+    background: rgba(0, 0, 0, 0.3)!important;
 }
